Remove funtion and total fixed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div id="gen-div">
     <input id="text-value" class="form-control form-control-lg" type="number" onkeypress="return isNumberKey(event)" placeholder="How many DIV ?" style="width: 40%;">
-    <button id="btn" type="button" class="btn btn-info">GO!</button>
+    <button id="btn" type="submit" class="btn btn-info">GO!</button>
     <button id="btn-rev" type="button" onclick="revDiv(this)" class="btn btn-info">Remove</button>
   </div>
 
